Fixed images in wedding page to align vertically inside their columns

--- a/src/cover.css
+++ b/src/cover.css
@@ -213,6 +213,12 @@ width: 50%;
 	text-align: left;
 }
 
+.vertical-align {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%)
+};
+
 /*
  * Footer
  */
